ajeitando mkdocs.yml

--- a/seer.app/site/backend/views/login/index.html
+++ b/seer.app/site/backend/views/login/index.html
@@ -9,21 +9,25 @@
       
       
       
+        <link rel="prev" href="../../../frontend/notifications-frontend/">
       
       
-      <link rel="icon" href="../../images/favicon.png">
+        <link rel="next" href="../onboarding/">
+      
+      
+      <link rel="icon" href="../../../images/favicon.png">
       <meta name="generator" content="mkdocs-1.6.1, mkdocs-material-9.6.15">
     
     
       
-        <title>Schemas - seer.app docs</title>
+        <title>Login - seer.app docs</title>
       
     
     
-      <link rel="stylesheet" href="../../assets/stylesheets/main.342714a4.min.css">
+      <link rel="stylesheet" href="../../../assets/stylesheets/main.342714a4.min.css">
       
         
-        <link rel="stylesheet" href="../../assets/stylesheets/palette.06af60db.min.css">
+        <link rel="stylesheet" href="../../../assets/stylesheets/palette.06af60db.min.css">
       
       
 
@@ -42,9 +46,9 @@
       
     
     
-      <link rel="stylesheet" href="../../css/extra.css">
+      <link rel="stylesheet" href="../../../css/extra.css">
     
-    <script>__md_scope=new URL("../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
+    <script>__md_scope=new URL("../../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
     
       
 
@@ -67,6 +71,11 @@
     <label class="md-overlay" for="__drawer"></label>
     <div data-md-component="skip">
       
+        
+        <a href="#views-de-autenticacao-e-inicio-da-sessao" class="md-skip">
+          Pular para conteúdo
+        </a>
+      
     </div>
     <div data-md-component="announce">
       
@@ -79,9 +88,9 @@
 
 <header class="md-header md-header--shadow" data-md-component="header">
   <nav class="md-header__inner md-grid" aria-label="Cabeçalho">
-    <a href="../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     <label class="md-header__button md-icon" for="__drawer">
@@ -98,7 +107,7 @@
         <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
             
-              Schemas
+              Login
             
           </span>
         </div>
@@ -176,9 +185,9 @@
 
 <nav class="md-nav md-nav--primary" aria-label="Navegação" data-md-level="0">
   <label class="md-nav__title" for="__drawer">
-    <a href="../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     seer.app docs
@@ -193,7 +202,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../.." class="md-nav__link">
+      <a href="../../.." class="md-nav__link">
         
   
   
@@ -260,7 +269,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/base-frontend/" class="md-nav__link">
+      <a href="../../../frontend/base-frontend/" class="md-nav__link">
         
   
   
@@ -283,7 +292,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/components-frontend/" class="md-nav__link">
+      <a href="../../../frontend/components-frontend/" class="md-nav__link">
         
   
   
@@ -306,7 +315,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/home-frontend/" class="md-nav__link">
+      <a href="../../../frontend/home-frontend/" class="md-nav__link">
         
   
   
@@ -329,7 +338,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/auth-frontend/" class="md-nav__link">
+      <a href="../../../frontend/auth-frontend/" class="md-nav__link">
         
   
   
@@ -352,7 +361,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/pannel-frontend/" class="md-nav__link">
+      <a href="../../../frontend/pannel-frontend/" class="md-nav__link">
         
   
   
@@ -375,7 +384,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/report_app_frontend/" class="md-nav__link">
+      <a href="../../../frontend/report_app_frontend/" class="md-nav__link">
         
   
   
@@ -398,7 +407,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/settings-frontend/" class="md-nav__link">
+      <a href="../../../frontend/settings-frontend/" class="md-nav__link">
         
   
   
@@ -421,7 +430,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/support-frontend/" class="md-nav__link">
+      <a href="../../../frontend/support-frontend/" class="md-nav__link">
         
   
   
@@ -444,7 +453,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/notifications-frontend/" class="md-nav__link">
+      <a href="../../../frontend/notifications-frontend/" class="md-nav__link">
         
   
   
@@ -471,8 +480,10 @@
       
   
   
+    
   
   
+  
     
     
     
@@ -483,13 +494,11 @@
       
     
     
-    <li class="md-nav__item md-nav__item--section md-nav__item--nested">
+    <li class="md-nav__item md-nav__item--active md-nav__item--section md-nav__item--nested">
       
         
         
-          
-        
-        <input class="md-nav__toggle md-toggle md-toggle--indeterminate" type="checkbox" id="__nav_3" >
+        <input class="md-nav__toggle md-toggle " type="checkbox" id="__nav_3" checked>
         
           
           <label class="md-nav__link" for="__nav_3" id="__nav_3_label" tabindex="">
@@ -505,7 +514,7 @@
             <span class="md-nav__icon md-icon"></span>
           </label>
         
-        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="false">
+        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="true">
           <label class="md-nav__title" for="__nav_3">
             <span class="md-nav__icon md-icon"></span>
             Back-End
@@ -516,10 +525,32 @@
                 
   
   
+    
   
   
-    <li class="md-nav__item">
-      <a href="../../backend/views/login/" class="md-nav__link">
+  
+    <li class="md-nav__item md-nav__item--active">
+      
+      <input class="md-nav__toggle md-toggle" type="checkbox" id="__toc">
+      
+      
+        
+      
+      
+        <label class="md-nav__link md-nav__link--active" for="__toc">
+          
+  
+  
+  <span class="md-ellipsis">
+    Login
+    
+  </span>
+  
+
+          <span class="md-nav__icon md-icon"></span>
+        </label>
+      
+      <a href="./" class="md-nav__link md-nav__link--active">
         
   
   
@@ -530,6 +561,71 @@
   
 
       </a>
+      
+        
+
+<nav class="md-nav md-nav--secondary" aria-label="Índice">
+  
+  
+  
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#visao-geral" class="md-nav__link">
+    <span class="md-ellipsis">
+      Visão Geral
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#complete_login" class="md-nav__link">
+    <span class="md-ellipsis">
+      complete_login
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#client_home" class="md-nav__link">
+    <span class="md-ellipsis">
+      client_home
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#welcomeview" class="md-nav__link">
+    <span class="md-ellipsis">
+      welcomeView
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#consideracoes-finais" class="md-nav__link">
+    <span class="md-ellipsis">
+      Considerações Finais
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
+  
+</nav>
+      
     </li>
   
 
@@ -542,7 +638,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/onboarding/" class="md-nav__link">
+      <a href="../onboarding/" class="md-nav__link">
         
   
   
@@ -565,7 +661,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/panel/" class="md-nav__link">
+      <a href="../panel/" class="md-nav__link">
         
   
   
@@ -588,7 +684,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/relatorios/" class="md-nav__link">
+      <a href="../relatorios/" class="md-nav__link">
         
   
   
@@ -611,7 +707,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/notifications/" class="md-nav__link">
+      <a href="../notifications/" class="md-nav__link">
         
   
   
@@ -634,7 +730,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/preferencias/" class="md-nav__link">
+      <a href="../preferencias/" class="md-nav__link">
         
   
   
@@ -657,7 +753,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/report_app_backend/" class="md-nav__link">
+      <a href="../../report_app_backend/" class="md-nav__link">
         
   
   
@@ -732,7 +828,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../report_app_database/" class="md-nav__link">
+      <a href="../../../db/report_app_database/" class="md-nav__link">
         
   
   
@@ -772,6 +868,61 @@
   
   
   
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#visao-geral" class="md-nav__link">
+    <span class="md-ellipsis">
+      Visão Geral
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#complete_login" class="md-nav__link">
+    <span class="md-ellipsis">
+      complete_login
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#client_home" class="md-nav__link">
+    <span class="md-ellipsis">
+      client_home
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#welcomeview" class="md-nav__link">
+    <span class="md-ellipsis">
+      welcomeView
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#consideracoes-finais" class="md-nav__link">
+    <span class="md-ellipsis">
+      Considerações Finais
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
   
 </nav>
                   </div>
@@ -787,9 +938,51 @@
 
 
 
-  <h1>Schemas</h1>
-
-
+<h1 id="views-de-autenticacao-e-inicio-da-sessao">Views de Autenticação e Início da Sessão</h1>
+<h2 id="visao-geral">Visão Geral</h2>
+<p>Este conjunto de views trata do fluxo de login e início da sessão do usuário na aplicação, com suporte a múltiplos tenants por subdomínio. As views gerenciam a autenticação, redirecionamento para a home do cliente e apresentação de boas-vindas.</p>
+<hr />
+<h2 id="complete_login"><em>complete_login</em></h2>
+<p>Finaliza o processo de login do usuário após o preenchimento da senha.</p>
+<ul>
+<li><strong>Método:</strong> <code>POST</code></li>
+<li><strong>URL de template:</strong> <code>client_app/auth/complete_login.html</code></li>
+<li><strong>Parâmetros esperados:</strong> <code>username</code> (via URL) e <code>password</code> (via POST)</li>
+<li><strong>Processo:</strong><ul>
+<li>Autentica o usuário usando <code>authenticate</code>.</li>
+<li>Descobre o tenant com base no subdomínio (<code>schema_name</code>).</li>
+<li>Valida a existência do tenant e do usuário.</li>
+<li>Em caso de sucesso, faz login com <code>login(request, user)</code> e redireciona para <code>client_home</code>.</li>
+<li>Em caso de falha, exibe mensagem de erro e redireciona para o login.</li>
+</ul>
+</li>
+</ul>
+<hr />
+<h2 id="client_home"><em>client_home</em></h2>
+<p>Renderiza a <strong>página inicial da aplicação</strong> para o cliente logado.</p>
+<ul>
+<li><strong>Método:</strong> <code>GET</code></li>
+<li><strong>Requer autenticação:</strong> obrigatória</li>
+<li><strong>Template:</strong> <code>client_app/app/home.html</code></li>
+<li><strong>Contexto enviado ao template:</strong><ul>
+<li><code>name</code>: nome capitalizado do subdomínio</li>
+<li><code>username</code>: nome de usuário autenticado</li>
+</ul>
+</li>
+<li><strong>Validação de tenant:</strong> tenta carregar via subdomínio. Se inválido, redireciona para o login com mensagem de erro.</li>
+</ul>
+<hr />
+<h2 id="welcomeview"><em>welcomeView</em></h2>
+<p>Exibe uma tela simples de <strong>boas-vindas</strong>.</p>
+<ul>
+<li><strong>Método:</strong> <code>GET</code></li>
+<li><strong>Template:</strong> <code>client_app/app/welcome.html</code></li>
+<li><strong>Autenticação:</strong> não obrigatória</li>
+<li><strong>Finalidade:</strong> apresentar uma interface amigável inicial ao usuário recém-ingresso.</li>
+</ul>
+<hr />
+<h2 id="consideracoes-finais">Considerações Finais</h2>
+<p>Essas três views compõem juntas o <strong>fluxo de entrada do usuário</strong>, do login até o acesso à aplicação. A validação por subdomínio garante o isolamento por tenant. O uso da função <code>schema_context()</code> em <code>complete_login</code> é essencial para autenticação multitenant segura.</p>
 
 
 
@@ -838,10 +1031,10 @@
     
     
       
-      <script id="__config" type="application/json">{"base": "../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
+      <script id="__config" type="application/json">{"base": "../../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
     
     
-      <script src="../../assets/javascripts/bundle.56ea9cef.min.js"></script>
+      <script src="../../../assets/javascripts/bundle.56ea9cef.min.js"></script>
       
     
   </body>
