--- a/seer.app/site/backend/views/notifications/index.html
+++ b/seer.app/site/backend/views/notifications/index.html
@@ -9,21 +9,25 @@
       
       
       
+        <link rel="prev" href="../relatorios/">
       
       
-      <link rel="icon" href="../../images/favicon.png">
+        <link rel="next" href="../preferencias/">
+      
+      
+      <link rel="icon" href="../../../images/favicon.png">
       <meta name="generator" content="mkdocs-1.6.1, mkdocs-material-9.6.15">
     
     
       
-        <title>Dashboard frontend - seer.app docs</title>
+        <title>Notificações - seer.app docs</title>
       
     
     
-      <link rel="stylesheet" href="../../assets/stylesheets/main.342714a4.min.css">
+      <link rel="stylesheet" href="../../../assets/stylesheets/main.342714a4.min.css">
       
         
-        <link rel="stylesheet" href="../../assets/stylesheets/palette.06af60db.min.css">
+        <link rel="stylesheet" href="../../../assets/stylesheets/palette.06af60db.min.css">
       
       
 
@@ -42,9 +46,9 @@
       
     
     
-      <link rel="stylesheet" href="../../css/extra.css">
+      <link rel="stylesheet" href="../../../css/extra.css">
     
-    <script>__md_scope=new URL("../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
+    <script>__md_scope=new URL("../../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
     
       
 
@@ -67,6 +71,11 @@
     <label class="md-overlay" for="__drawer"></label>
     <div data-md-component="skip">
       
+        
+        <a href="#documentacao-views-de-notificacoes" class="md-skip">
+          Pular para conteúdo
+        </a>
+      
     </div>
     <div data-md-component="announce">
       
@@ -79,9 +88,9 @@
 
 <header class="md-header md-header--shadow" data-md-component="header">
   <nav class="md-header__inner md-grid" aria-label="Cabeçalho">
-    <a href="../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     <label class="md-header__button md-icon" for="__drawer">
@@ -98,7 +107,7 @@
         <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
             
-              Dashboard frontend
+              Notificações
             
           </span>
         </div>
@@ -176,9 +185,9 @@
 
 <nav class="md-nav md-nav--primary" aria-label="Navegação" data-md-level="0">
   <label class="md-nav__title" for="__drawer">
-    <a href="../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     seer.app docs
@@ -193,7 +202,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../.." class="md-nav__link">
+      <a href="../../.." class="md-nav__link">
         
   
   
@@ -260,7 +269,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../base-frontend/" class="md-nav__link">
+      <a href="../../../frontend/base-frontend/" class="md-nav__link">
         
   
   
@@ -283,7 +292,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../components-frontend/" class="md-nav__link">
+      <a href="../../../frontend/components-frontend/" class="md-nav__link">
         
   
   
@@ -306,7 +315,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../home-frontend/" class="md-nav__link">
+      <a href="../../../frontend/home-frontend/" class="md-nav__link">
         
   
   
@@ -329,7 +338,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../auth-frontend/" class="md-nav__link">
+      <a href="../../../frontend/auth-frontend/" class="md-nav__link">
         
   
   
@@ -352,12 +361,12 @@
   
   
     <li class="md-nav__item">
-      <a href="../dashboard-fronted.md" class="md-nav__link">
+      <a href="../../../frontend/pannel-frontend/" class="md-nav__link">
         
   
   
   <span class="md-ellipsis">
-    Página Painél
+    Página Painel
     
   </span>
   
@@ -368,57 +377,28 @@
 
               
             
-          </ul>
-        </nav>
-      
-    </li>
-  
-
-    
-      
-      
+              
+                
   
   
   
   
-    
-    
-    
-    
-      
+    <li class="md-nav__item">
+      <a href="../../../frontend/report_app_frontend/" class="md-nav__link">
         
-        
-      
-    
-    
-    <li class="md-nav__item md-nav__item--section md-nav__item--nested">
-      
-        
-        
-          
-        
-        <input class="md-nav__toggle md-toggle md-toggle--indeterminate" type="checkbox" id="__nav_3" >
-        
-          
-          <label class="md-nav__link" for="__nav_3" id="__nav_3_label" tabindex="">
-            
   
   
   <span class="md-ellipsis">
-    Back-End
+    Página Relatórios
     
   </span>
   
 
-            <span class="md-nav__icon md-icon"></span>
-          </label>
-        
-        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="false">
-          <label class="md-nav__title" for="__nav_3">
-            <span class="md-nav__icon md-icon"></span>
-            Back-End
-          </label>
-          <ul class="md-nav__list" data-md-scrollfix>
+      </a>
+    </li>
+  
+
+              
             
               
                 
@@ -427,7 +407,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/settings/" class="md-nav__link">
+      <a href="../../../frontend/settings-frontend/" class="md-nav__link">
         
   
   
@@ -450,12 +430,12 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/api/" class="md-nav__link">
+      <a href="../../../frontend/support-frontend/" class="md-nav__link">
         
   
   
   <span class="md-ellipsis">
-    API
+    Suporte
     
   </span>
   
@@ -473,12 +453,12 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/utils/" class="md-nav__link">
+      <a href="../../../frontend/notifications-frontend/" class="md-nav__link">
         
   
   
   <span class="md-ellipsis">
-    Bibliotecas
+    Notificações
     
   </span>
   
@@ -489,28 +469,57 @@
 
               
             
-              
-                
+          </ul>
+        </nav>
+      
+    </li>
+  
+
+    
+      
+      
+  
+  
+    
   
   
   
-  
-    <li class="md-nav__item">
-      <a href="../../backend/auth-backend/" class="md-nav__link">
+    
+    
+    
+    
+      
         
+        
+      
+    
+    
+    <li class="md-nav__item md-nav__item--active md-nav__item--section md-nav__item--nested">
+      
+        
+        
+        <input class="md-nav__toggle md-toggle " type="checkbox" id="__nav_3" checked>
+        
+          
+          <label class="md-nav__link" for="__nav_3" id="__nav_3_label" tabindex="">
+            
   
   
   <span class="md-ellipsis">
-    Autenticação
+    Back-End
     
   </span>
   
 
-      </a>
-    </li>
-  
-
-              
+            <span class="md-nav__icon md-icon"></span>
+          </label>
+        
+        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="true">
+          <label class="md-nav__title" for="__nav_3">
+            <span class="md-nav__icon md-icon"></span>
+            Back-End
+          </label>
+          <ul class="md-nav__list" data-md-scrollfix>
             
               
                 
@@ -519,12 +528,228 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/complete_login/" class="md-nav__link">
+      <a href="../login/" class="md-nav__link">
         
   
   
   <span class="md-ellipsis">
     Login
+    
+  </span>
+  
+
+      </a>
+    </li>
+  
+
+              
+            
+              
+                
+  
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../onboarding/" class="md-nav__link">
+        
+  
+  
+  <span class="md-ellipsis">
+    Onboarding
+    
+  </span>
+  
+
+      </a>
+    </li>
+  
+
+              
+            
+              
+                
+  
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../panel/" class="md-nav__link">
+        
+  
+  
+  <span class="md-ellipsis">
+    Painel
+    
+  </span>
+  
+
+      </a>
+    </li>
+  
+
+              
+            
+              
+                
+  
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../relatorios/" class="md-nav__link">
+        
+  
+  
+  <span class="md-ellipsis">
+    Relatórios
+    
+  </span>
+  
+
+      </a>
+    </li>
+  
+
+              
+            
+              
+                
+  
+  
+    
+  
+  
+  
+    <li class="md-nav__item md-nav__item--active">
+      
+      <input class="md-nav__toggle md-toggle" type="checkbox" id="__toc">
+      
+      
+        
+      
+      
+        <label class="md-nav__link md-nav__link--active" for="__toc">
+          
+  
+  
+  <span class="md-ellipsis">
+    Notificações
+    
+  </span>
+  
+
+          <span class="md-nav__icon md-icon"></span>
+        </label>
+      
+      <a href="./" class="md-nav__link md-nav__link--active">
+        
+  
+  
+  <span class="md-ellipsis">
+    Notificações
+    
+  </span>
+  
+
+      </a>
+      
+        
+
+<nav class="md-nav md-nav--secondary" aria-label="Índice">
+  
+  
+  
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#visao-geral" class="md-nav__link">
+    <span class="md-ellipsis">
+      Visão Geral
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#1-notifications_pagerequest" class="md-nav__link">
+    <span class="md-ellipsis">
+      1. notifications_page(request)
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#2-update_notification_preferencerequest" class="md-nav__link">
+    <span class="md-ellipsis">
+      2. update_notification_preference(request)
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#consideracoes-finais" class="md-nav__link">
+    <span class="md-ellipsis">
+      Considerações Finais
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
+  
+</nav>
+      
+    </li>
+  
+
+              
+            
+              
+                
+  
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../preferencias/" class="md-nav__link">
+        
+  
+  
+  <span class="md-ellipsis">
+    Preferências
+    
+  </span>
+  
+
+      </a>
+    </li>
+  
+
+              
+            
+              
+                
+  
+  
+  
+  
+    <li class="md-nav__item">
+      <a href="../../report_app_backend/" class="md-nav__link">
+        
+  
+  
+  <span class="md-ellipsis">
+    Página Relatórios
     
   </span>
   
@@ -594,35 +819,12 @@
   
   
     <li class="md-nav__item">
-      <a href="../../db/schemas/" class="md-nav__link">
+      <a href="../../../db/report_app_database/" class="md-nav__link">
         
   
   
   <span class="md-ellipsis">
-    Esquema e Relações
-    
-  </span>
-  
-
-      </a>
-    </li>
-  
-
-              
-            
-              
-                
-  
-  
-  
-  
-    <li class="md-nav__item">
-      <a href="../../db/models/" class="md-nav__link">
-        
-  
-  
-  <span class="md-ellipsis">
-    Modelos
+    Página Relatórios
     
   </span>
   
@@ -636,72 +838,6 @@
           </ul>
         </nav>
       
-    </li>
-  
-
-    
-      
-      
-  
-  
-  
-  
-    <li class="md-nav__item">
-      <a href="../../testing/" class="md-nav__link">
-        
-  
-  
-  <span class="md-ellipsis">
-    Testes
-    
-  </span>
-  
-
-      </a>
-    </li>
-  
-
-    
-      
-      
-  
-  
-  
-  
-    <li class="md-nav__item">
-      <a href="../../deployment/" class="md-nav__link">
-        
-  
-  
-  <span class="md-ellipsis">
-    Deploy
-    
-  </span>
-  
-
-      </a>
-    </li>
-  
-
-    
-      
-      
-  
-  
-  
-  
-    <li class="md-nav__item">
-      <a href="../../devops/" class="md-nav__link">
-        
-  
-  
-  <span class="md-ellipsis">
-    DevOps
-    
-  </span>
-  
-
-      </a>
     </li>
   
 
@@ -723,6 +859,52 @@
   
   
   
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#visao-geral" class="md-nav__link">
+    <span class="md-ellipsis">
+      Visão Geral
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#1-notifications_pagerequest" class="md-nav__link">
+    <span class="md-ellipsis">
+      1. notifications_page(request)
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#2-update_notification_preferencerequest" class="md-nav__link">
+    <span class="md-ellipsis">
+      2. update_notification_preference(request)
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#consideracoes-finais" class="md-nav__link">
+    <span class="md-ellipsis">
+      Considerações Finais
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
   
 </nav>
                   </div>
@@ -738,9 +920,43 @@
 
 
 
-  <h1>Dashboard frontend</h1>
-
-
+<h1 id="documentacao-views-de-notificacoes">Documentação - Views de Notificações</h1>
+<h2 id="visao-geral"><em>Visão Geral</em></h2>
+<p>O módulo de notificações é responsável por exibir avisos ao usuário dentro da plataforma, bem como permitir a atualização da preferência de recebimento por e-mail. Contém duas views principais:</p>
+<hr />
+<h2 id="1-notifications_pagerequest"><em>1. notifications_page(request)</em></h2>
+<p><strong>Descrição:</strong>  </p>
+<p>Renderiza a página de notificações com possibilidade de filtragem (lidas/não lidas) e marcação de leitura individual ou em massa.</p>
+<p><strong>Detalhes:</strong></p>
+<ul>
+<li>Requer login do usuário (<code>@login_required</code>)</li>
+<li>Utiliza a lista estática <code>NOTIFICATIONS</code> (em memória)</li>
+<li>Adiciona dinamicamente a chave <code>formatted_date</code> para exibição</li>
+<li>Suporta filtro via <code>?unread=true</code> (mostra apenas não lidas)</li>
+<li>Permite marcação como lida via POST:<ul>
+<li>Notificações selecionadas (<code>notification_ids</code>)</li>
+<li>Todas da lista renderizada, se nenhuma for selecionada</li>
+</ul>
+</li>
+</ul>
+<p><strong>Template:</strong>  </p>
+<ul>
+<li><code>client_app/app/notifications.html</code></li>
+</ul>
+<hr />
+<h2 id="2-update_notification_preferencerequest"><em>2. update_notification_preference(request)</em></h2>
+<p><strong>Descrição:</strong>  </p>
+<p>Endpoint POST para atualizar a preferência de recebimento de notificações por e-mail do usuário autenticado.</p>
+<p><strong>Detalhes:</strong></p>
+<ul>
+<li>Requer login do usuário (<code>@login_required</code>)</li>
+<li>Espera JSON com a chave <code>"enabled"</code> (valor booleano)</li>
+<li>Atualiza o campo <code>mail_notifications</code> do modelo <code>User</code></li>
+<li>Retorna JSON de status: <code>success</code> ou <code>error</code></li>
+</ul>
+<hr />
+<h2 id="consideracoes-finais"><em>Considerações Finais</em></h2>
+<p>Essas views integram tanto a interface de notificações quanto o gerenciamento das preferências do usuário. Apesar de simples, fornecem uma base funcional para futuras integrações com bancos de dados ou sistemas de mensageria mais robustos.</p>
 
 
 
@@ -789,10 +1005,10 @@
     
     
       
-      <script id="__config" type="application/json">{"base": "../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
+      <script id="__config" type="application/json">{"base": "../../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
     
     
-      <script src="../../assets/javascripts/bundle.56ea9cef.min.js"></script>
+      <script src="../../../assets/javascripts/bundle.56ea9cef.min.js"></script>
       
     
   </body>
