--- a/seer.app/site/backend/views/onboarding/index.html
+++ b/seer.app/site/backend/views/onboarding/index.html
@@ -9,21 +9,25 @@
       
       
       
+        <link rel="prev" href="../login/">
       
       
-      <link rel="icon" href="../../images/favicon.png">
+        <link rel="next" href="../panel/">
+      
+      
+      <link rel="icon" href="../../../images/favicon.png">
       <meta name="generator" content="mkdocs-1.6.1, mkdocs-material-9.6.15">
     
     
       
-        <title>Schemas - seer.app docs</title>
+        <title>Onboarding - seer.app docs</title>
       
     
     
-      <link rel="stylesheet" href="../../assets/stylesheets/main.342714a4.min.css">
+      <link rel="stylesheet" href="../../../assets/stylesheets/main.342714a4.min.css">
       
         
-        <link rel="stylesheet" href="../../assets/stylesheets/palette.06af60db.min.css">
+        <link rel="stylesheet" href="../../../assets/stylesheets/palette.06af60db.min.css">
       
       
 
@@ -42,9 +46,9 @@
       
     
     
-      <link rel="stylesheet" href="../../css/extra.css">
+      <link rel="stylesheet" href="../../../css/extra.css">
     
-    <script>__md_scope=new URL("../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
+    <script>__md_scope=new URL("../../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
     
       
 
@@ -67,6 +71,11 @@
     <label class="md-overlay" for="__drawer"></label>
     <div data-md-component="skip">
       
+        
+        <a href="#documentacao-das-views-de-onboarding" class="md-skip">
+          Pular para conteúdo
+        </a>
+      
     </div>
     <div data-md-component="announce">
       
@@ -79,9 +88,9 @@
 
 <header class="md-header md-header--shadow" data-md-component="header">
   <nav class="md-header__inner md-grid" aria-label="Cabeçalho">
-    <a href="../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     <label class="md-header__button md-icon" for="__drawer">
@@ -98,7 +107,7 @@
         <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
             
-              Schemas
+              Onboarding
             
           </span>
         </div>
@@ -176,9 +185,9 @@
 
 <nav class="md-nav md-nav--primary" aria-label="Navegação" data-md-level="0">
   <label class="md-nav__title" for="__drawer">
-    <a href="../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     seer.app docs
@@ -193,7 +202,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../.." class="md-nav__link">
+      <a href="../../.." class="md-nav__link">
         
   
   
@@ -260,7 +269,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/base-frontend/" class="md-nav__link">
+      <a href="../../../frontend/base-frontend/" class="md-nav__link">
         
   
   
@@ -283,7 +292,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/components-frontend/" class="md-nav__link">
+      <a href="../../../frontend/components-frontend/" class="md-nav__link">
         
   
   
@@ -306,7 +315,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/home-frontend/" class="md-nav__link">
+      <a href="../../../frontend/home-frontend/" class="md-nav__link">
         
   
   
@@ -329,7 +338,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/auth-frontend/" class="md-nav__link">
+      <a href="../../../frontend/auth-frontend/" class="md-nav__link">
         
   
   
@@ -352,7 +361,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/pannel-frontend/" class="md-nav__link">
+      <a href="../../../frontend/pannel-frontend/" class="md-nav__link">
         
   
   
@@ -375,7 +384,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/report_app_frontend/" class="md-nav__link">
+      <a href="../../../frontend/report_app_frontend/" class="md-nav__link">
         
   
   
@@ -398,7 +407,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/settings-frontend/" class="md-nav__link">
+      <a href="../../../frontend/settings-frontend/" class="md-nav__link">
         
   
   
@@ -421,7 +430,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/support-frontend/" class="md-nav__link">
+      <a href="../../../frontend/support-frontend/" class="md-nav__link">
         
   
   
@@ -444,7 +453,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/notifications-frontend/" class="md-nav__link">
+      <a href="../../../frontend/notifications-frontend/" class="md-nav__link">
         
   
   
@@ -471,8 +480,10 @@
       
   
   
+    
   
   
+  
     
     
     
@@ -483,13 +494,11 @@
       
     
     
-    <li class="md-nav__item md-nav__item--section md-nav__item--nested">
+    <li class="md-nav__item md-nav__item--active md-nav__item--section md-nav__item--nested">
       
         
         
-          
-        
-        <input class="md-nav__toggle md-toggle md-toggle--indeterminate" type="checkbox" id="__nav_3" >
+        <input class="md-nav__toggle md-toggle " type="checkbox" id="__nav_3" checked>
         
           
           <label class="md-nav__link" for="__nav_3" id="__nav_3_label" tabindex="">
@@ -505,7 +514,7 @@
             <span class="md-nav__icon md-icon"></span>
           </label>
         
-        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="false">
+        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="true">
           <label class="md-nav__title" for="__nav_3">
             <span class="md-nav__icon md-icon"></span>
             Back-End
@@ -519,7 +528,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/login/" class="md-nav__link">
+      <a href="../login/" class="md-nav__link">
         
   
   
@@ -539,10 +548,32 @@
                 
   
   
+    
   
   
-    <li class="md-nav__item">
-      <a href="../../backend/views/onboarding/" class="md-nav__link">
+  
+    <li class="md-nav__item md-nav__item--active">
+      
+      <input class="md-nav__toggle md-toggle" type="checkbox" id="__toc">
+      
+      
+        
+      
+      
+        <label class="md-nav__link md-nav__link--active" for="__toc">
+          
+  
+  
+  <span class="md-ellipsis">
+    Onboarding
+    
+  </span>
+  
+
+          <span class="md-nav__icon md-icon"></span>
+        </label>
+      
+      <a href="./" class="md-nav__link md-nav__link--active">
         
   
   
@@ -553,6 +584,71 @@
   
 
       </a>
+      
+        
+
+<nav class="md-nav md-nav--secondary" aria-label="Índice">
+  
+  
+  
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-1-identificacao-e-perfil-da-empresa" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 1: Identificação e Perfil da Empresa
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-2-objetivos-e-desafios" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 2: Objetivos e Desafios
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-3-integracao" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 3: Integração
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-4-planos" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 4: Planos
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#consideracoes-finais" class="md-nav__link">
+    <span class="md-ellipsis">
+      Considerações Finais
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
+  
+</nav>
+      
     </li>
   
 
@@ -565,7 +661,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/panel/" class="md-nav__link">
+      <a href="../panel/" class="md-nav__link">
         
   
   
@@ -588,7 +684,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/relatorios/" class="md-nav__link">
+      <a href="../relatorios/" class="md-nav__link">
         
   
   
@@ -611,7 +707,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/notifications/" class="md-nav__link">
+      <a href="../notifications/" class="md-nav__link">
         
   
   
@@ -634,7 +730,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/preferencias/" class="md-nav__link">
+      <a href="../preferencias/" class="md-nav__link">
         
   
   
@@ -657,7 +753,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/report_app_backend/" class="md-nav__link">
+      <a href="../../report_app_backend/" class="md-nav__link">
         
   
   
@@ -732,7 +828,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../report_app_database/" class="md-nav__link">
+      <a href="../../../db/report_app_database/" class="md-nav__link">
         
   
   
@@ -772,6 +868,61 @@
   
   
   
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-1-identificacao-e-perfil-da-empresa" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 1: Identificação e Perfil da Empresa
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-2-objetivos-e-desafios" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 2: Objetivos e Desafios
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-3-integracao" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 3: Integração
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#etapa-4-planos" class="md-nav__link">
+    <span class="md-ellipsis">
+      Etapa 4: Planos
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#consideracoes-finais" class="md-nav__link">
+    <span class="md-ellipsis">
+      Considerações Finais
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
   
 </nav>
                   </div>
@@ -787,9 +938,98 @@
 
 
 
-  <h1>Schemas</h1>
-
-
+<h1 id="documentacao-das-views-de-onboarding">Documentação das Views de Onboarding</h1>
+<p>Este documento reúne a documentação completa das views relacionadas ao processo de onboarding da plataforma multi-tenant. As views estão organizadas por etapa de execução e seguem o padrão adotado no projeto.</p>
+<hr />
+<h2 id="etapa-1-identificacao-e-perfil-da-empresa">Etapa 1: Identificação e Perfil da Empresa</h2>
+<p><strong>getNameRole</strong></p>
+<p>Responsável por capturar o nome e o papel do representante da empresa.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code></li>
+<li>Template: <code>client_app/app/onboarding/step1/getNameRole.html</code></li>
+<li>Redireciona para: <code>getCompanyInfos</code></li>
+</ul>
+<hr />
+<p><strong>getCompanyInfos</strong></p>
+<p>Coleta informações organizacionais como segmento, área de atuação, porte e maturidade em dados.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code>, <code>HeadCountChoices</code>, <code>DataMaturityLevelChoices</code></li>
+<li>Template: <code>client_app/app/onboarding/step1/getCompanyInfos.html</code></li>
+<li>Redireciona para: <code>letsProceedOnboarding</code></li>
+</ul>
+<hr />
+<p><strong>letsProceedOnboarding</strong></p>
+<p>Tela de confirmação que resume os dados fornecidos anteriormente antes da transição para a etapa 2.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code></li>
+<li>Template: <code>client_app/app/onboarding/step1/letsProceedOnboarding.html</code></li>
+</ul>
+<hr />
+<h2 id="etapa-2-objetivos-e-desafios">Etapa 2: Objetivos e Desafios</h2>
+<p><strong>getGoal</strong></p>
+<p>Define o objetivo principal da empresa usando slugs convertidos em texto legível.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code></li>
+<li>Template: <code>client_app/app/onboarding/step2/getGoal.html</code></li>
+<li>Redireciona para: <code>dataChallenges</code></li>
+</ul>
+<hr />
+<p><strong>dataChallenges</strong></p>
+<p>Permite ao usuário selecionar os desafios enfrentados pela empresa.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code>, <code>TenantChallenge</code></li>
+<li>Template: <code>client_app/app/onboarding/step2/dataChallenges.html</code></li>
+<li>Redireciona para: <code>letsIntegrate</code></li>
+</ul>
+<hr />
+<p><strong>chooseYourChallenges</strong></p>
+<p>Alternativa visual para seleção de desafios, usando SLUG_LABELS.</p>
+<ul>
+<li>Modelos: <code>TenantChallenge</code></li>
+<li>Template: <code>client_app/app/onboarding/step2/chooseYourChallenges.html</code></li>
+<li>Redireciona para: <code>letsIntegrate</code></li>
+</ul>
+<hr />
+<h2 id="etapa-3-integracao">Etapa 3: Integração</h2>
+<p><strong>letsIntegrate</strong></p>
+<p>Resumo da meta principal e dos desafios selecionados. Prepara para a integração com a plataforma.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code>, <code>TenantChallenge</code></li>
+<li>Template: <code>client_app/app/onboarding/step3/letsIntegrate.html</code></li>
+</ul>
+<hr />
+<p><strong>letsIntegrate2</strong></p>
+<p>Versão alternativa da tela anterior sem exibição da meta principal.</p>
+<ul>
+<li>Modelos: <code>TenantChallenge</code></li>
+<li>Template: <code>client_app/app/onboarding/step3/letsIntegrate2.html</code></li>
+</ul>
+<hr />
+<p><strong>ferramentasGestao</strong></p>
+<p>Exibe uma lista de ferramentas de gestão por categoria, com nome, imagem, id e tags.</p>
+<ul>
+<li>Categorias e ferramentas são definidas localmente via listas de dicionários</li>
+<li>Exibe dados como: nome, imagem estática, id e tags por ferramenta</li>
+<li>Template: <code>client_app/app/onboarding/step3/ferramentasGestao.html</code></li>
+</ul>
+<hr />
+<h2 id="etapa-4-planos">Etapa 4: Planos</h2>
+<p><strong>planos</strong></p>
+<p>Analisa os dados coletados e recomenda um plano adequado (Básico ou Pro).</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code>, <code>TenantChallenge</code></li>
+<li>Template: <code>client_app/app/onboarding/step4/planos.html</code></li>
+</ul>
+<hr />
+<p><strong>recomendacao_plano</strong></p>
+<p>Renderiza uma tela visual com os dados e desafios selecionados da empresa.</p>
+<ul>
+<li>Modelos: <code>TenantProfile</code>, <code>TenantChallenge</code></li>
+<li>Template: <code>client_app/app/onboarding/step4/recomendacao_plano.html</code></li>
+</ul>
+<hr />
+<h2 id="consideracoes-finais">Considerações Finais</h2>
+<p>O conjunto de views documentado aqui forma um fluxo coeso e completo para onboarding de empresas em um sistema multi-tenant. Cada etapa foi planejada para coletar dados de forma segmentada e contextualizada, facilitando a personalização de soluções com base no perfil, dores e objetivos de cada cliente. O uso consistente do <code>schema_context</code> garante o isolamento seguro de dados, e a estrutura modular permite evolução futura com facilidade.</p>
 
 
 
@@ -838,10 +1078,10 @@
     
     
       
-      <script id="__config" type="application/json">{"base": "../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
+      <script id="__config" type="application/json">{"base": "../../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
     
     
-      <script src="../../assets/javascripts/bundle.56ea9cef.min.js"></script>
+      <script src="../../../assets/javascripts/bundle.56ea9cef.min.js"></script>
       
     
   </body>
