--- a/seer.app/site/backend/views/relatorios/index.html
+++ b/seer.app/site/backend/views/relatorios/index.html
@@ -9,21 +9,25 @@
       
       
       
+        <link rel="prev" href="../panel/">
       
       
-      <link rel="icon" href="../../images/favicon.png">
+        <link rel="next" href="../notifications/">
+      
+      
+      <link rel="icon" href="../../../images/favicon.png">
       <meta name="generator" content="mkdocs-1.6.1, mkdocs-material-9.6.15">
     
     
       
-        <title>Schemas - seer.app docs</title>
+        <title>Relatórios - seer.app docs</title>
       
     
     
-      <link rel="stylesheet" href="../../assets/stylesheets/main.342714a4.min.css">
+      <link rel="stylesheet" href="../../../assets/stylesheets/main.342714a4.min.css">
       
         
-        <link rel="stylesheet" href="../../assets/stylesheets/palette.06af60db.min.css">
+        <link rel="stylesheet" href="../../../assets/stylesheets/palette.06af60db.min.css">
       
       
 
@@ -42,9 +46,9 @@
       
     
     
-      <link rel="stylesheet" href="../../css/extra.css">
+      <link rel="stylesheet" href="../../../css/extra.css">
     
-    <script>__md_scope=new URL("../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
+    <script>__md_scope=new URL("../../..",location),__md_hash=e=>[...e].reduce(((e,_)=>(e<<5)-e+_.charCodeAt(0)),0),__md_get=(e,_=localStorage,t=__md_scope)=>JSON.parse(_.getItem(t.pathname+"."+e)),__md_set=(e,_,t=localStorage,a=__md_scope)=>{try{t.setItem(a.pathname+"."+e,JSON.stringify(_))}catch(e){}}</script>
     
       
 
@@ -67,6 +71,11 @@
     <label class="md-overlay" for="__drawer"></label>
     <div data-md-component="skip">
       
+        
+        <a href="#documentacao-das-views-de-relatorios" class="md-skip">
+          Pular para conteúdo
+        </a>
+      
     </div>
     <div data-md-component="announce">
       
@@ -79,9 +88,9 @@
 
 <header class="md-header md-header--shadow" data-md-component="header">
   <nav class="md-header__inner md-grid" aria-label="Cabeçalho">
-    <a href="../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-header__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     <label class="md-header__button md-icon" for="__drawer">
@@ -98,7 +107,7 @@
         <div class="md-header__topic" data-md-component="header-topic">
           <span class="md-ellipsis">
             
-              Schemas
+              Relatórios
             
           </span>
         </div>
@@ -176,9 +185,9 @@
 
 <nav class="md-nav md-nav--primary" aria-label="Navegação" data-md-level="0">
   <label class="md-nav__title" for="__drawer">
-    <a href="../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
+    <a href="../../.." title="seer.app docs" class="md-nav__button md-logo" aria-label="seer.app docs" data-md-component="logo">
       
-  <img src="../../images/logo.png" alt="logo">
+  <img src="../../../images/logo.png" alt="logo">
 
     </a>
     seer.app docs
@@ -193,7 +202,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../.." class="md-nav__link">
+      <a href="../../.." class="md-nav__link">
         
   
   
@@ -260,7 +269,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/base-frontend/" class="md-nav__link">
+      <a href="../../../frontend/base-frontend/" class="md-nav__link">
         
   
   
@@ -283,7 +292,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/components-frontend/" class="md-nav__link">
+      <a href="../../../frontend/components-frontend/" class="md-nav__link">
         
   
   
@@ -306,7 +315,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/home-frontend/" class="md-nav__link">
+      <a href="../../../frontend/home-frontend/" class="md-nav__link">
         
   
   
@@ -329,7 +338,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/auth-frontend/" class="md-nav__link">
+      <a href="../../../frontend/auth-frontend/" class="md-nav__link">
         
   
   
@@ -352,7 +361,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/pannel-frontend/" class="md-nav__link">
+      <a href="../../../frontend/pannel-frontend/" class="md-nav__link">
         
   
   
@@ -375,7 +384,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/report_app_frontend/" class="md-nav__link">
+      <a href="../../../frontend/report_app_frontend/" class="md-nav__link">
         
   
   
@@ -398,7 +407,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/settings-frontend/" class="md-nav__link">
+      <a href="../../../frontend/settings-frontend/" class="md-nav__link">
         
   
   
@@ -421,7 +430,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/support-frontend/" class="md-nav__link">
+      <a href="../../../frontend/support-frontend/" class="md-nav__link">
         
   
   
@@ -444,7 +453,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../frontend/notifications-frontend/" class="md-nav__link">
+      <a href="../../../frontend/notifications-frontend/" class="md-nav__link">
         
   
   
@@ -471,8 +480,10 @@
       
   
   
+    
   
   
+  
     
     
     
@@ -483,13 +494,11 @@
       
     
     
-    <li class="md-nav__item md-nav__item--section md-nav__item--nested">
+    <li class="md-nav__item md-nav__item--active md-nav__item--section md-nav__item--nested">
       
         
         
-          
-        
-        <input class="md-nav__toggle md-toggle md-toggle--indeterminate" type="checkbox" id="__nav_3" >
+        <input class="md-nav__toggle md-toggle " type="checkbox" id="__nav_3" checked>
         
           
           <label class="md-nav__link" for="__nav_3" id="__nav_3_label" tabindex="">
@@ -505,7 +514,7 @@
             <span class="md-nav__icon md-icon"></span>
           </label>
         
-        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="false">
+        <nav class="md-nav" data-md-level="1" aria-labelledby="__nav_3_label" aria-expanded="true">
           <label class="md-nav__title" for="__nav_3">
             <span class="md-nav__icon md-icon"></span>
             Back-End
@@ -519,7 +528,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/login/" class="md-nav__link">
+      <a href="../login/" class="md-nav__link">
         
   
   
@@ -542,7 +551,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/onboarding/" class="md-nav__link">
+      <a href="../onboarding/" class="md-nav__link">
         
   
   
@@ -565,7 +574,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/panel/" class="md-nav__link">
+      <a href="../panel/" class="md-nav__link">
         
   
   
@@ -585,10 +594,32 @@
                 
   
   
+    
   
   
-    <li class="md-nav__item">
-      <a href="../../backend/views/relatorios/" class="md-nav__link">
+  
+    <li class="md-nav__item md-nav__item--active">
+      
+      <input class="md-nav__toggle md-toggle" type="checkbox" id="__toc">
+      
+      
+        
+      
+      
+        <label class="md-nav__link md-nav__link--active" for="__toc">
+          
+  
+  
+  <span class="md-ellipsis">
+    Relatórios
+    
+  </span>
+  
+
+          <span class="md-nav__icon md-icon"></span>
+        </label>
+      
+      <a href="./" class="md-nav__link md-nav__link--active">
         
   
   
@@ -599,6 +630,125 @@
   
 
       </a>
+      
+        
+
+<nav class="md-nav md-nav--secondary" aria-label="Índice">
+  
+  
+  
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#relatorios" class="md-nav__link">
+    <span class="md-ellipsis">
+      relatorios
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#modelos" class="md-nav__link">
+    <span class="md-ellipsis">
+      modelos
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#metadados" class="md-nav__link">
+    <span class="md-ellipsis">
+      metadados
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#indicadores" class="md-nav__link">
+    <span class="md-ellipsis">
+      indicadores
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#visualizacoes" class="md-nav__link">
+    <span class="md-ellipsis">
+      visualizacoes
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#destinatarios_canais" class="md-nav__link">
+    <span class="md-ellipsis">
+      destinatarios_canais
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#agendamentos" class="md-nav__link">
+    <span class="md-ellipsis">
+      agendamentos
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#revisao" class="md-nav__link">
+    <span class="md-ellipsis">
+      revisao
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#relatorio_detail" class="md-nav__link">
+    <span class="md-ellipsis">
+      relatorio_detail
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#acoes-de-gerenciamento" class="md-nav__link">
+    <span class="md-ellipsis">
+      Ações de Gerenciamento
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#observacao-final" class="md-nav__link">
+    <span class="md-ellipsis">
+      Observação Final
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
+  
+</nav>
+      
     </li>
   
 
@@ -611,7 +761,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/notifications/" class="md-nav__link">
+      <a href="../notifications/" class="md-nav__link">
         
   
   
@@ -634,7 +784,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/views/preferencias/" class="md-nav__link">
+      <a href="../preferencias/" class="md-nav__link">
         
   
   
@@ -657,7 +807,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../../backend/report_app_backend/" class="md-nav__link">
+      <a href="../../report_app_backend/" class="md-nav__link">
         
   
   
@@ -732,7 +882,7 @@
   
   
     <li class="md-nav__item">
-      <a href="../report_app_database/" class="md-nav__link">
+      <a href="../../../db/report_app_database/" class="md-nav__link">
         
   
   
@@ -772,6 +922,115 @@
   
   
   
+    
+  
+  
+    <label class="md-nav__title" for="__toc">
+      <span class="md-nav__icon md-icon"></span>
+      Índice
+    </label>
+    <ul class="md-nav__list" data-md-component="toc" data-md-scrollfix>
+      
+        <li class="md-nav__item">
+  <a href="#relatorios" class="md-nav__link">
+    <span class="md-ellipsis">
+      relatorios
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#modelos" class="md-nav__link">
+    <span class="md-ellipsis">
+      modelos
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#metadados" class="md-nav__link">
+    <span class="md-ellipsis">
+      metadados
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#indicadores" class="md-nav__link">
+    <span class="md-ellipsis">
+      indicadores
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#visualizacoes" class="md-nav__link">
+    <span class="md-ellipsis">
+      visualizacoes
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#destinatarios_canais" class="md-nav__link">
+    <span class="md-ellipsis">
+      destinatarios_canais
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#agendamentos" class="md-nav__link">
+    <span class="md-ellipsis">
+      agendamentos
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#revisao" class="md-nav__link">
+    <span class="md-ellipsis">
+      revisao
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#relatorio_detail" class="md-nav__link">
+    <span class="md-ellipsis">
+      relatorio_detail
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#acoes-de-gerenciamento" class="md-nav__link">
+    <span class="md-ellipsis">
+      Ações de Gerenciamento
+    </span>
+  </a>
+  
+</li>
+      
+        <li class="md-nav__item">
+  <a href="#observacao-final" class="md-nav__link">
+    <span class="md-ellipsis">
+      Observação Final
+    </span>
+  </a>
+  
+</li>
+      
+    </ul>
   
 </nav>
                   </div>
@@ -787,9 +1046,72 @@
 
 
 
-  <h1>Schemas</h1>
-
-
+<h1 id="documentacao-das-views-de-relatorios">Documentação das Views de Relatórios</h1>
+<p>Este documento descreve todas as views relacionadas à criação, edição, gerenciamento e envio de relatórios agendados na aplicação multi-tenant.</p>
+<hr />
+<h2 id="relatorios"><code>relatorios</code></h2>
+<p>Lista todos os relatórios agendados (ativos ou inativos).Permite busca por nome, filtro por categoria e alternância entre abas (ativos/inativos).</p>
+<ul>
+<li>Template: <code>client_app/app/relatorios/relatorios.html</code></li>
+</ul>
+<hr />
+<h2 id="modelos"><code>modelos</code></h2>
+<p>Exibe modelos prontos de relatórios para seleção e inicializa um novo rascunho com base em um template.</p>
+<ul>
+<li>Template: <code>client_app/app/relatorios/modelos.html</code></li>
+</ul>
+<hr />
+<h2 id="metadados"><code>metadados</code></h2>
+<p>Etapa 2: coleta metadados do relatório, como título, categoria e descrição.</p>
+<ul>
+<li>Template: <code>client_app/app/relatorios/metadados.html</code></li>
+</ul>
+<hr />
+<h2 id="indicadores"><code>indicadores</code></h2>
+<p>Etapa 3: permite a seleção dos indicadores que serão incluídos no relatório.</p>
+<ul>
+<li>Template: client_app/app/relatorios/indicadores.html</li>
+</ul>
+<hr />
+<h2 id="visualizacoes"><code>visualizacoes</code></h2>
+<p>Etapa 4: define os tipos de visualização que serão gerados (ex: gráficos).</p>
+<ul>
+<li>Template: <code>client_app/app/relatorios/visualizacoes.html</code></li>
+</ul>
+<hr />
+<h2 id="destinatarios_canais"><code>destinatarios_canais</code></h2>
+<p>Etapa 5: define os e-mails de destino para recebimento dos relatórios.</p>
+<ul>
+<li>Template: <code>client_app/app/relatorios/destinatarios_canais.html</code></li>
+</ul>
+<hr />
+<h2 id="agendamentos"><code>agendamentos</code></h2>
+<p>Etapa 6: define a frequência de envio do relatório.</p>
+<p>Template: <code>client_app/app/relatorios/agendamentos.html</code></p>
+<hr />
+<h2 id="revisao"><code>revisao</code></h2>
+<p>Etapa 7: revisão final e criação do objeto <code>ReportSchedule</code> persistente.</p>
+<ul>
+<li>Template: `client_app/app/relatorios/revisao.html``</li>
+</ul>
+<hr />
+<h2 id="relatorio_detail"><code>relatorio_detail</code></h2>
+<p>Visualização detalhada de um relatório agendado.</p>
+<ul>
+<li>Template: client_app/app/relatorios/detail.html</li>
+</ul>
+<hr />
+<h2 id="acoes-de-gerenciamento">Ações de Gerenciamento</h2>
+<ul>
+<li><code>cancelar_draft</code>: remove um rascunho de relatório não finalizado</li>
+<li><code>disable_schedule</code>: desativa um agendamento</li>
+<li><code>delete_schedule</code>: deleta um agendamento</li>
+<li><code>disable_schedules</code>: desativa vários agendamentos</li>
+<li><code>delete_schedules</code>: deleta vários agendamentos</li>
+<li><code>reactivate_schedules</code>: reativa agendamentos inativos</li>
+</ul>
+<h2 id="observacao-final">Observação Final</h2>
+<p>As views de relatório seguem uma sequência de etapas bem definida (<code>STEPS</code>) que guia o usuário desde a escolha do modelo até a revisão e agendamento. Toda a lógica respeita o isolamento de dados por tenant com uso de <code>schema_context</code>, e está preparada para personalizações futuras.</p>
 
 
 
@@ -838,10 +1160,10 @@
     
     
       
-      <script id="__config" type="application/json">{"base": "../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
+      <script id="__config" type="application/json">{"base": "../../..", "features": ["navigation.expand", "navigation.sections", "search.highlight", "content.code.copy"], "search": "../../../assets/javascripts/workers/search.d50fe291.min.js", "tags": null, "translations": {"clipboard.copied": "Copiado para \u00e1rea de transfer\u00eancia", "clipboard.copy": "Copiar para \u00e1rea de transfer\u00eancia", "search.result.more.one": "mais 1 nesta p\u00e1gina", "search.result.more.other": "# mais nesta p\u00e1gina", "search.result.none": "Nenhum documento encontrado", "search.result.one": "1 documento encontrado", "search.result.other": "# documentos encontrados", "search.result.placeholder": "Digite para iniciar a busca", "search.result.term.missing": "Ausente", "select.version": "Selecione a vers\u00e3o"}, "version": null}</script>
     
     
-      <script src="../../assets/javascripts/bundle.56ea9cef.min.js"></script>
+      <script src="../../../assets/javascripts/bundle.56ea9cef.min.js"></script>
       
     
   </body>
